# dns-resolver

./: .gitignore  CMakeLists.txt  README.md  dig.raw  dns.raw
docs/: rfc3596.txt
src/: domain.c  domain.h  main.c  message.c  message.h  resource_record.c  resource_record.h
